# semantic-brain-model

./: Cargo.toml  README.md
doc/: vision.md
src/: main.rs
src/preprocessing/: audio.rs  file.rs  mod.rs  visual.rs  visual_object.rs
src/senses/: file.rs  mod.rs
src/senses/auditory/: mod.rs
src/senses/visual/: cellular_automaton.rs  cut_highlights_from_image.rs  extract_highlights.rs  find_edges.rs  heat_map.rs  helpers.rs  mod.rs  point.rs  visual_object.rs
src/som/: mod.rs  neuron.rs  point.rs  table.rs
