[package]
name = "semantic-brain-model"
version = "0.1.0"
authors = ["Michael Bausano <michael@joinpouch.com>"]
description = "Connects visual and audio information from a video."
repository = "https://github.com/bausano/semantic-brain-model"
readme = "README.md"

[dependencies]
hound = "3.4.0"
image = "*"
